fix: 1st-for removed marin-top for container, 2nd-changed styles for prices__title and services__title (subtitle too), 3d-changed elements of wrap to elements of cards, same changes do with element of list, 4d-add discription for images, 5th-same changes do with block services

--- a/css/style.css
+++ b/css/style.css
@@ -18,32 +18,37 @@ body{
 }
 
 .container{
+    padding-top: 75px;
     max-width: 1920px;
     min-height: 1081px;
     background-color: #006c00;
-    margin-top: 52px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
-.prices__title{
+.title{
     text-align: center;
     color: #fcfcfc;
     font-size: 35px;
     font-weight: 700;
-    padding-top: 75px;
 }
 
-.prices__subtitle{
+.subtitle{
     text-align: center;
     color: #fcfcfc;
     font-size: 18px;
     font-weight: 400;
+}
+
+
+.prices__subtitle{
     margin-top: 49px;
 }
 
 .wrap{
-    margin: auto;
     margin-top: 75px;
-    max-width: 1400px;
+    min-width: 1400px;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
@@ -61,7 +66,7 @@ body{
     margin-right: 0;
 }
 
-.wrap__title{
+.card__title{
     font-size: 19px;
     font-weight: 700;
     color: #1a1820;
@@ -71,7 +76,7 @@ body{
     margin-bottom: 0px;
 }
 
-.wrap__img{
+.card__img{
     margin: 33px auto 0 auto;
     width: 300px;
     height: 200px;
@@ -81,7 +86,7 @@ img{
     width: 100%;
 }
 
-.wrap__price {
+.card__price {
     text-align: center;
     margin-top: 37px;
     margin-bottom: 30px;
@@ -90,22 +95,25 @@ img{
     font-weight: 700;
   }
   
-.wrap__price-value {
+.card__price-value {
     font-size: 30px;
 }
 
-.wrap__list{
+.list{
     text-align: center;
     list-style-image: url(../img/checked_\(4\).png);
     list-style-position: inside;
-    padding: 0;
     min-height: 150px;
     font-size: 18px;
     font-weight: 400;
     line-height: 30px;
 }
 
-.wrap__btn{
+.card__list{
+    padding: 0;
+}
+
+.card__btn{
     display: flex;
     align-items: flex-end;
     justify-content: center;
@@ -130,30 +138,22 @@ img{
     min-height: 703px;
     background-color: #006c00;
     margin-top: 48px;
-    margin-bottom: 50px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 .services__title{
-    text-align: center;
-    color: #fcfcfc;
-    font-size: 36px;
-    font-weight: 700;
-    padding-top: 110px;
-    line-height: 18px;
+    margin-top: 110px;
 }
 
 .services__subtitle{
-    text-align: center;
-    color: #fcfcfc;
-    font-size: 18px;
-    font-weight: 400;
     margin-top: 56px;
 }
 
 .services__wrap{
-    margin: auto;
     margin-top: 93px;
-    max-width: 1210px;
+    min-width: 1210px;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
@@ -162,6 +162,11 @@ img{
 .services__card{
     width: 330px;
     height: 340px;
+}
+
+.services__img{
+    width: 330px;
+    height: 174px;
 }
     
 .services__card:last-child{
